--- a/backend/src/public/styles.css
+++ b/backend/src/public/styles.css
@@ -38,7 +38,7 @@ section {
     align-items: center;
     margin-top: 40px;
     justify-content: center;
-    font-size: xx-large;
+    font-size: x-large;
     text-align: center;
 }
 
